# uni-algo-conan-example

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: unified-build.yml
scenarios/01-header-only/: CMakeLists.txt  README.md  build.sh  conanfile.txt
scenarios/02-static-library/: CMakeLists.txt  README.md  build.sh  conanfile.txt
scenarios/03-shared-library/: CMakeLists.txt  README.md  build.sh  conanfile.txt  run.sh
shared/src/: simple_test.cpp  unicode_example.cpp  unicode_example_headeronly.cpp
tools/: clean_all.sh  find_conan_paths.sh  test_all.sh
